--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "node-fu",
-    "version": "0.0.2",
+    "name": "nodejs-fu",
+    "version": "0.0.3",
     "license": "MIT",
     "author": {
         "name": "Francesco Bianco",
