--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nodejs-fu",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "license": "MIT",
     "author": {
         "name": "Francesco Bianco",
@@ -8,7 +8,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/javanile/node-fu.git"
+        "url": "https://github.com/javanile/nodejs-fu.git"
     },
     "main": "index.js",
     "scripts": {
