--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "chai": "^3.5.0",
         "chai-fs": "^1.0.0",
         "mocha": "^3.2.0"
+    },
+    "dependencies": {
+        "mkdirp": "^0.5.1"
     }
 }
